--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-<h1>Hello</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>PY44N</title>
+    <link rel="stylesheet" href="Libraries/Bootstrap.css">
+
+    <script src="Libraries/Jquery.js"></script>
+    <script src="Libraries/Popper.js"></script>
+    <script src="Libraries/Bootstrap.js"></script>
+</head>
+<body>
+<div class="container-fluid text-center p-3 mb-2 bg-dark text-white">
+    <h1>PY44N</h1>
+    <br/>
+    <h3>Social</h3>
+    <div class="container-fluid text-center p-3 mb-2 bg-dark text-white">
+        <img src="Img/github.png" alt="Github" width="50" height="50" onclick="window.location.href='https://github.com/PY44N'">
+        <img src="Img/youtube.png" alt="YouTube" width="50" height="50" onclick="window.location.href='https://www.youtube.com/channel/UCoxvdTSiNhGyXnQVczlkCig'">
+    </div>
+    <br/>
+    <h3>Coding Languages</h3>
+    <div class="container-fluid text-center p-3 mb-2 bg-dark text-white">
+        <img src="https://github.com/PY44N/PY44N/raw/master/Img/c%2B%2B.png" alt="cplusplus" width="40" height="40"/>
+        <img src="https://github.com/PY44N/PY44N/raw/master/Img/c%23.png" alt="csharp" width="40" height="40"/>
+        <img src="https://github.com/PY44N/PY44N/raw/master/Img/css.png" alt="css3" width="40" height="40"/>
+        <img src="https://github.com/PY44N/PY44N/raw/master/Img/html.png" alt="html5" width="40" height="40"/>
+        <img src="https://github.com/PY44N/PY44N/raw/master/Img/java.png" alt="java" width="40" height="40"/>
+        <img src="https://github.com/PY44N/PY44N/raw/master/Img/javascript.png" alt="javascript" width="40" height="40"/>
+        <img src="https://github.com/PY44N/PY44N/raw/master/Img/lua.png" alt="lua" width="40" height="40"/>
+        <img src="https://github.com/PY44N/PY44N/raw/master/Img/nodejs.png" alt="nodejs" width="40" height="40"/>
+        <img src="https://github.com/PY44N/PY44N/raw/master/Img/python.png" alt="python" width="40" height="40"/>
+    </div>
+    <br/>
+    <h3>Github Stats</h3>
+    <div class="container-fluid text-center p-3 mb-2 bg-dark text-white">
+        <img align="center" src="https://github-readme-stats.vercel.app/api?username=py44n&show_icons=true" alt="py44n" />
+        <br/>
+        <br/>
+        <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=py44n&layout=compact&hide=html" alt="py44n" />
+    </div>
+    <br/>
+    <h3>Projects I am working on</h3>
+    <div class="container-fluid text-center p-3 mb-2 bg-dark text-white">
+        <button type="button" class="btn btn-outline-secondary" onclick="window.location.href='https://www.astrocore.net/'">Astrocore</button>
+    </div>
+</div>
+</body>
+</html>
